<resources>
    <string name="app_name">Mini Stockbit</string>
    <string name="first_fragment_label">Login Fragment</string>
    <string name="second_fragment_label">Home Fragment</string>
    <string name="label_belum_punya_akun_daftar_sekarang"><![CDATA[<b>Belum punya akun? <font color=#00AB6D>Daftar sekarang</font></b>]]></string>
    <string name="label_percent">%1$s (%2$s%%)</string>
    <string name="hint_silahkan_isi_password_anda">Silahkan isi password Anda</string>
    <string name="hint_format_email_salah">Format email salah</string>
    <string name="hint_silahkan_isi_email_anda">Silahkan isi email Anda</string>
    <string name="label_masuk">Masuk</string>
    <string name="desc_back">Tombol Kembali</string>
    <string name="desc_tombol_telphone">Tombol Telphone</string>
    <string name="label_masuk_dengan_google">Masuk dengan Google</string>
    <string name="label_masuk_dengan_facebook">Masuk dengan Facebook</string>
    <string name="atau">Atau</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="label_lupa_password">Lupa Password</string>
    <string name="label_login">Login</string>
    <string name="label_masuk_dengan_fingerprint">Masuk dengan fingerprint</string>
</resources>