<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".moduls.MiniStockbitActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
        android:contentDescription="@string/desc_back"/>

    <ImageView
        android:id="@+id/ivCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_call_24"
        android:contentDescription="@string/desc_tombol_telphone"/>

    <TextView
        android:id="@+id/tvTitle"
        style="@style/NunitoBold.18.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_masuk"
        app:layout_constraintBottom_toBottomOf="@+id/ivBack"
        app:layout_constraintEnd_toStartOf="@+id/ivCall"
        app:layout_constraintStart_toEndOf="@+id/ivBack"
        app:layout_constraintTop_toTopOf="@+id/ivBack" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoogle"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/label_masuk_dengan_google"
        android:textAllCaps="false"
        app:icon="@drawable/ic_google"
        app:iconTint="@null"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFacebook"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/label_masuk_dengan_facebook"
        android:textAllCaps="false"
        app:icon="@drawable/ic_facebook"
        app:iconTint="@null"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogle" />

    <View
        android:id="@+id/view_left"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        style="@style/Nunito.14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/atau"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFacebook" />

    <View
        android:id="@+id/view_right"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilUsername">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@android:color/transparent"
            android:hint="@string/hint_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvForgetPassword"
        style="@style/Nunito.14.Green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_lupa_password"
        app:layout_constraintEnd_toEndOf="@+id/tilPassword"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:enabled="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/label_login"
        android:textAllCaps="false"
        android:backgroundTint="@color/green"
        app:layout_constraintEnd_toEndOf="@+id/tvForgetPassword"
        app:layout_constraintStart_toStartOf="@+id/tilPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvForgetPassword" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/btnFingerprint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_masuk_dengan_fingerprint"
        android:textAllCaps="false"
        android:textColor="@color/green"
        app:strokeColor="@color/green"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/tvDaftar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/label_belum_punya_akun_daftar_sekarang"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/btnFingerprint"
        app:layout_constraintStart_toStartOf="@+id/btnFingerprint"
        app:layout_constraintTop_toBottomOf="@+id/btnFingerprint" />

</androidx.constraintlayout.widget.ConstraintLayout>